# meistroverse

./: .env.example  AGENTS.md  DOCKER.md  Dockerfile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
docker/grafana/provisioning/dashboards/: dashboard.yml
docker/grafana/provisioning/datasources/: prometheus.yml
docker/mysql/: dev-init.sql  init.sql
docker/nginx/: nginx.conf
docker/nginx/conf.d/: meistroverse.conf
docker/prometheus/: prometheus.yml
docker/redis/: redis.conf
meistroverse/: __init__.py  celery_app.py
meistroverse/agents/: __init__.py  base.py  code_mutation_agent.py  prompt_qc_agent.py
meistroverse/api/: __init__.py  dashboard.py  task_launcher.py
meistroverse/config/: settings.py
meistroverse/core/: __init__.py  agent_chain.py  knowledge_indexer.py  semantic_journal.py  suggestion_loop.py  task_router.py
meistroverse/database/: __init__.py  connection.py  models.py
meistroverse/tasks/: __init__.py  analysis_tasks.py  maintenance_tasks.py  notification_tasks.py
meistroverse/utils/: logger.py
scripts/: docker-deploy.sh  run.py
